feat: add errorResponse to endpoints
